<resources>
    <string name="app_name">Próca Bláthanna</string>

    <string name="action_logout">Logout</string>
    <string name="action_app_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_send_feedback">Send Feedback</string>

    <!-- NavBar -->

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notices">Notices</string>

    <!-- Strings used for fragments for navigation -->
    <string name="user_home">User Home</string>
    <string name="add_flower">Add Flower</string>
    <string name="home_page">home_page</string>

    <!-- Flower Page -->
    <string name="button_add_flower">Add Flower</string>
    <string name="next">Next</string>
    <string name="button_add_new_flower">Add New Flower</string>
    <string name="add_flower_name">Name</string>
    <string name="prompt_add_flower_name">Name</string>
    <string name="add_flower_family">Flower Family</string>
    <string name="prompt_add_flower_family">Flower Family</string>
    <string name="add_flower_season">Season</string>
    <string name="prompt_add_flower_season">Season</string>
    <string name="add_flower_description">Description</string>
    <string name="prompt_add_flower_description">Description</string>
    <string name="add_flower_care">How to Care for</string>
    <string name="prompt_add_flower_care">How to Care for</string>
    <string name="button_add_flower_photo">Add Photo of Flower</string>
    <string name="change_flower_image">"Change flower Image"</string>

    <!-- button -->
    <string name="menu_add_flower">Add</string>
    <string name="menu_clear_flower">Clear</string>
    <string name="menu_delete_flower">Delete</string>
    <string name="menu_cancel_flower">Cancel</string>
    <string name="pick_flower_image">Select flower image</string>

    <string name="title_activity_settings">Settings</string>


    <!-- Login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="account_already_login">Already have an account? Login</string>
    <string name="register_now">Register</string>
    <string name="register_prompt_email">Email</string>
    <string name="register_prompt_password">Password</string>
    <string name="register_action_sign_in">Sign In!</string>
    <string name="register_action_sign_in_short">Sign in</string>
    <string name="email_id">Email ID</string>
    <string name="submit_email_id">Submit</string>

    <!-- Preference Titles -->
    <string name="settings_header">General</string>
    <string name="sync_header">Sync</string>
    <string name="pref_theme">Appearance</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Display Name</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync periodically</string>

    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Theme Preferences -->
    <string name="theme_type">Theme</string>
    <string name="theme_title">Dark Theme</string>
    <string name="theme_dark_on">To switch the appearance of the app to Dark theme, please navigate to Settings on your device > Accessibility > Display > Turn on Dark Theme </string>
    <!--    <string name="theme_dark_on">Switch the appearance of the app to Light from Dark theme</string>-->


    <!-- Firebase Login -->
    <string name="launch_title">Please Login</string>
    <string name="sign_in_start">Start</string>
    <string name="sign_in_silent">Sign in silently</string>
    <string name="providers_header">Auth providers</string>
    <string name="providers_google">Google</string>
    <string name="providers_email">Email</string>
    <string name="providers_email_link">Email link</string>
    <string name="providers_phone">Phone</string>
    <string name="providers_github">GitHub</string>
    <string name="providers_microsoft">Microsoft</string>
    <string name="providers_anonymous">Anonymous</string>
    <string name="layout_header">Layout</string>
    <string name="layout_default">Default</string>
    <string name="layout_custom">Custom</string>

    <string name="theme_header">Theme</string>
    <string name="theme_default">Material Light Theme</string>
    <string name="theme_app">App Theme</string>
    <string name="theme_green">Green Theme</string>

    <string name="logo_header">Logo</string>
    <string name="logo_firebase">Firebase Auth</string>
    <string name="logo_google">Google</string>
    <string name="logo_none">None</string>

    <string name="tos_pp_header">Terms of Service and Privacy Policy</string>
    <string name="tos_pp_google">Google</string>
    <string name="tos_pp_firebase">Firebase</string>
    <string name="tos_pp_none">None</string>

    <string name="google_scopes_header">Example extra Google scopes</string>
    <string name="google_scope_drive_file">Drive File</string>
    <string name="google_scope_youtube_data">Youtube data</string>

    <string name="facebook_permissions_header">Example extra Facebook permissions</string>
    <string name="facebook_permission_friends">Friends</string>
    <string name="facebook_permission_photos">Photos</string>

    <string name="options_header">Other Options</string>
    <string name="options_enable_credential_selector">Enable Smart Lock\'s credential selector</string>
    <string name="options_enable_hint_selector">Enable Smart Lock\'s hint selector</string>
    <string name="options_allow_new_email_acccount">Allow new account creation</string>
    <string name="options_require_name">Require first/last name with email accounts.</string>
    <string name="options_use_auth_emulator">Connect to auth emulator (localhost:9099).</string>
    <string name="register_here">Register Here</string>

</resources>