<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ie.wit.mob2_pb.activities.MainActivity">
    <item
        android:id="@+id/item_add"
        android:icon="@drawable/ic_action_name"
        android:title="@string/menu_add_flower"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/app_about"
        android:icon="@android:drawable/ic_dialog_info"
        android:orderInCategory="100"
        android:title="@string/action_app_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/send_feedback"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="100"
        android:title="@string/action_send_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_action_user"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />


</menu>